--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,21 +1,20 @@
 
 <div>
   <div data-controller="cart">
-    <h1 class="font-bold text-4xl">E-Commerce</h1>
+    <h1 class="font-bold text-4xl" style="color: #000099;">E-Commerce</h1>
     <li>
       <% @products.each do |product| %>
         <ul>
-        <h3 class="font-medium text-xl">Producto:</h3>
+        <h3 class="font-bold text-xl" style="color: #008458;">Product:</h3>
           <%= product.name %>
-          <h3 class="font-medium text-xl">Descripcion:</h3>
+          <h3 class="font-bold text-xl" style="color: #008458;">Description:</h3>
           <%= product.description %>
-          <button class="px-6 h-12 uppercase font-semibold tracking-wider border-2 border-black bg-teal-400 text-black" type="submit">
+          <button class="px-6 h-12 font-semibold tracking-wider" type="submit">
             <%= link_to "Add to cart", cart_items_path(product_id: product.id), data: { "turbo-method": "post" } %>
           </button>
         </ul>
       <% end %>
     </li>
-
     <br>
     <br>
     <% if current_user %>
