--- a/app/views/pages/_cart.html.erb
+++ b/app/views/pages/_cart.html.erb
@@ -8,5 +8,5 @@
   </button>
 <% end %>
 
-<h1>Total Price:</h1>
+<h1 class="font-bold text-l">Total Price:</h1>
 <%= current_user.cart.total_price %>
